HSTTWO-1242 - Avoid jumpyness by showing an indicator where the component will be inserted  - Enhanced drawing indicator code  - changed green background to green border for drop indication  - added 'loading..' msg to item labels
svn path=/ecm/site-toolkit/trunk/; revision=24821

--- a/site-toolkit/client-modules/page-composer/src/main/resources/hippo/pagecomposer/css/PageEditor.css
+++ b/site-toolkit/client-modules/page-composer/src/main/resources/hippo/pagecomposer/css/PageEditor.css
@@ -118,7 +118,7 @@
 #hst-drop-indicator {
     z-index: 500;
     background: red;
-    opacity: 1;
+    opacity: 0.9;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
   	-moz-box-shadow: 3px 3px 3px #666;
@@ -136,9 +136,9 @@
 }
 
 .hst-highlight {
-    opacity: 0.5;
+    opacity: 1;
     z-index: 1000;
-    background-color: #00ff33;
+    border: 2px solid #00ff33;
 }
 .hst-highlight .hst-overlay-container-item {
     display: none;
